--- a/package.json
+++ b/package.json
@@ -112,7 +112,11 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.15.30",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/runner": "^3.2.4",
@@ -131,9 +135,13 @@
     "@n8n/n8n-nodes-langchain": "^1.109.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "n8n": "^1.110.1",
     "n8n-core": "^1.109.0",
     "n8n-workflow": "^1.107.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sql.js": "^1.13.0",
     "uuid": "^10.0.0"
   },
